# Wardrobe

./: .gitignore  README.md  main.py  pyproject.toml
controllers/: churn_controller.py  main_controller.py
models/: customer_churn.py  customer_churn_model.pkl
models/churn/: customer_churn.py
services/: churn_service.py  database_service.py
ui/app/: ui_mainwindow.py
ui/qt/: MainWindow.ui
utils/: database.py
views/: analytics_db_table.py  analytics_graphs.py  main_window.py
views/churn/: __init__.py
