[project]
name = "wardrobe"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "scikit-learn (>=1.3,<2.0)",
    "xgboost (>=2.0,<3.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry]
package-mode = false
